Replacing the missing IOUtils