@@ -17,7 +17,6 @@
 package org.grad.eNav.vdesCtrl.services;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import org.apache.commons.io.IOUtils;
 import org.grad.eNav.vdesCtrl.models.PubSubMsgHeaders;
 import org.grad.eNav.vdesCtrl.models.domain.StationType;
 import org.grad.eNav.vdesCtrl.models.dtos.S125Node;
@@ -79,7 +78,7 @@ class S125WebSocketServiceTest {
         // First read a valid S125 content to generate the publish-subscribe
         // message for.
         InputStream in = new ClassPathResource("s125-msg.xml").getInputStream();
-        String xml = IOUtils.toString(in, StandardCharsets.UTF_8.name());
+        String xml = new String(in.readAllBytes(), StandardCharsets.UTF_8.name());
 
         // Also create a GeoJSON point geometry for our S125 message
         JsonNode point = GeoJSONUtils.createGeoJSONPoint(53.61, 1.594);
